tao de thi (i.e. 10 de mac dinh) tu list cau hoi by topic